--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   font-family: 'Crimson Text', serif;
   line-height: 1.4;
   margin: 0 2rem;
+  background: #f0f0f0;
 }
 
 header {
@@ -51,7 +52,7 @@ header a {
 }
 
 li a:hover {
-  background-color: #e0876a;
+  background-color: #585858;
   color: white;
 }
 
@@ -103,14 +104,13 @@ footer {
   justify-content: center;
   padding: 3rem;
   grid-gap: 3rem;
-  background-color: #667292;
+  background-color: white;
   border-radius: 2rem;
 }
 
 .top-box-a {
   grid-area: top-box-a;
   padding: 3rem;
-  background-color: #8d9db6;
   border-radius: 2rem;
 }
 
@@ -124,7 +124,7 @@ footer {
 
 .box {
   margin: 1rem 1rem;
-  background-color: #daebe8;
+  background-color: white;
   border-radius: 1rem;
 }
 
